# orca-external-tools

./: CLA.md  CONTRIBUTING.md  README.md  aimnet2.sh  aimnet2client.sh  aimnet2server.sh  gxtb.py  mlatom4orca.py  mopac.sh  uma.sh  umaclient.sh  umaserver.sh
.github/ISSUE_TEMPLATE/: bug_report.md
aimnet2/: README.md  install.sh  pyproject.toml
aimnet2/src/aimnet2exttool/: calculator.py  client.py  common.py  server.py  standalone.py
aimnet2/test/: H2O_goat_extclient.inp  HF_exttool.inp  HF_orca_ext.inp  HF_orca_extclient.inp  run_tests.sh
aimnet2/test/output/: H2O_goat_extclient.out  HF.engrad  HF_exttool.out  HF_orca_ext.out  HF_orca_extclient.out  HF_orca_extclient.serverout
test/mlatom/: da_EXT.extinp.tmp  da_EXT.xyz  da_energy_ani.npz  ethanol_EXT.extinp.tmp  ethanol_EXT.xyz
test/mlatom/example_outputs/: da_EXT.engrad  da_EXT.mlatom.out  ethanol_EXT.engrad  ethanol_EXT.mlatom.out
uma/: README.md  install.sh  pyproject.toml
uma/src/umaexttool/: calculator.py  client.py  common.py  server.py  standalone.py
uma/test/: H2O_goat_extclient.inp  HF.xyz  HF_orca_ext.inp  HF_orca_extclient.inp  run_tests.sh
uma/test/output/: H2O_goat_extclient.out  HF_exttool.out  HF_orca_ext.out  HF_orca_extclient.out
